worked on suspension chapter

--- a/src/sections/suspension/parts/commutativity.tex
+++ b/src/sections/suspension/parts/commutativity.tex
@@ -1,6 +1,6 @@
 % lemma
 \begin{mystatement}{lemma}{suspension::commutativity}
-    The rooted microbundles $\whitney{\bb}{\be{B}}$ and $\whitney{\be{B}}{\bb}$ are rooted-isomorphic. 
+    The rooted microbundles $\whitney{\bb}{\be{B}}$ and $\whitney{\be{B}}{\bb}$ are rooted isomorphic. 
 \end{mystatement}
 
 % proof
