--- a/src/sections/suspension/parts/induced.tex
+++ b/src/sections/suspension/parts/induced.tex
@@ -1,8 +1,7 @@
 % definition
 \begin{mystatement}{definition}{suspension::induced}
     Let $\bb$ be a rooted microbundle over $B$ and $f: A \to B$ a based map.
-    The \defterm{induced microbundle} of $f$ over $\bb$
-    is the initial induced microbundle $\ind{f}\bb$ together with the rooting
+    The induced microbundle $\ind{f}\bb$ is equipped with the rooting
     \[
         \germdef{\ind{f}R}{E(\ind{f}\bb[a_0])
         = a_0 \cross E(\bb[b_0])}{e^n_{a_0}}
@@ -13,10 +12,10 @@
 
 % afterword
 \begin{myparagraph}
-    Note that the total space $E(\ind{f}\bb[a_0])$ equals $a_0 \cross E(\bbb)$ because
+    The total space $E(\ind{f}\bb[a_0])$ equals $a_0 \cross E(\bbb)$, because
     \[
         E(\ind{f}\bb[a_0])
-        = \set{(a, e) \in A \cross E(\bb)}{a = a_0 \land f(a) = b_0 = j(e)}
+        = \set{(a, e) \in A \cross E(\bb)}{a = a_0 \tand f(a) = b_0 = j(e)}
     \]
     \[
         = a_0 \cross \set{e \in E(\bb)}{j(e) = b_0}
