--- a/src/sections/suspension/section.tex
+++ b/src/sections/suspension/section.tex
@@ -1,12 +1,13 @@
 \begin{myparagraph}
-    In this chapter, we provide the proof for \myintref{whitney::bouquet}.
-    Along the way, we introduce `rooted-microbundles' which are
-    microbundles with a little more structure, show a slightly sharper version of
-    the Homotopy Theorem and study the wedge sum of two rooted microbundles.
+    In this chapter, we provide a proof for the Bouquet Lemma in \ref{whitney::bouquet}.
+    For this purpose we introduce so called `rooted microbundles'.
+    They allow us to properly define the wedge sum of two microbundles.
+    We will also show a version of the Homotopy Theorem
+    that is compatible with rooted-microbundles.
 
-    Throughout the chapter,
-    we assume that every topological space comes with an arbitray base point which
-    we will denote with a $0$ subscript.
+    Throughout this chapter,
+    we assume that every topological space comes with an arbitrary base point
+    which we will denote with subscript $0$.
 \end{myparagraph}
 \section{Rooted Microbundles}\label{section::rooted}
 \input{src/sections/suspension/parts/rooted}
