--- a/src/sections/whitney/parts/trivialize.tex
+++ b/src/sections/whitney/parts/trivialize.tex
@@ -8,7 +8,7 @@
 \end{myparagraph}
 
 % bouquet proposition
-\begin{mystatement}{proposition}{whitney::bouquet}[59]
+\begin{mystatement}{proposition}[Bouquet Lemma]{whitney::bouquet}[59]
     Let $\bb$ be a microbundle over a `bouquet' of spheres $B$, meeting in a single point.
     Then there exists a map $r: B \to B$ such that $\whitney{\bb}{\ind{r}\bb}$ is trivial.
 \end{mystatement}
