worked on suspension chapter

--- a/src/sections/microbundle/parts/underlying.tex
+++ b/src/sections/microbundle/parts/underlying.tex
@@ -1,12 +1,33 @@
 % example
 \begin{mystatement}{example}[underlying microbundle]{microbundle::underlying}
     Let $\xi: E \xto{\pi} B$ be a $n$-dimensional vector bundle.
-    The microbundle $\lvert \xi \rvert: \bundle{B}{E}{i}{\pi}$ where $i(b) := \phi_b(b, 0)$, where
-    $\phi_b: U_b \cross \R^n \to \inv{\pi}(U_b)$ is the local trivialization over a
-    neighborhood $U_b \sub B$ of $b$. We call $\lvert \xi \rvert$ the \defterm{underlying microbundle} of $\xi$
+    The \defterm{underlying microbundle} $\abs{\xi}$ of $\xi$ is a microbundle
+    \[ \bundledef{\abs{\xi}}{B}{E}{i}{\pi} \]
+    where $i: B \to E$ denotes the \defterm{zero-cross section} of $\xi$, that is
+    the section that maps every $b \in B$ to the neutral element $0_b$
+    of its fiber $\inv{\pi}(b) \cong \R^n$.
 \end{mystatement}
 
 % proof
-\begin{myproof}
-    TODO
+\begin{myproof}[that $\abs{\xi}$ is a microbundle]
+    % open
+    First, note that $\pi$ is an open map:
+
+    Let $V \sub E$ be open.
+    For every $b \in \pi(V)$, there exists a neighborhood $U_b$
+    together with a homeomorphism $\phi_b: \inv{\pi}(U_b) \isomto U_b \times \R^n$.
+    It follows that $\pi\restr{\inv{\pi}(U_b)} = \pi_1 \circ \phi_b$.
+    Hence, $\pi\restr{\inv{\pi}(U_b)}$ is open due to openness of $\pi_1$ and $\phi_b$.
+
+    We conclude from
+    \[ \pi(V) = \bigcup_{b \in B} \pi\restr{\inv{\pi}(U_b)}(V) \]
+    that $\pi$ is open.
+
+    % continuity and compatibility
+    Now from $\inv{i}(V) = \pi(V)$ it follows that $i$ is continuous.
+    Additionally, $\pi \circ i = id_B$ since $\pi(i(b)) = \pi(0_b) = b$. 
+
+    % local triviality
+    Local triviality and commutativity with $id \cross 0$ and $\pi_1$
+    are immediatly inherited from the local triviality conditions for vector bundles.
 \end{myproof}
