--- a/src/sections/microbundle/section.tex
+++ b/src/sections/microbundle/section.tex
@@ -5,8 +5,11 @@
     cover some fundamental examples for microbundles.
 \end{myparagraph}
 \input{src/sections/microbundle/parts/definition}
+\input{src/sections/microbundle/parts/local}
 \input{src/sections/microbundle/parts/isomorphy}
 \input{src/sections/microbundle/parts/totalspace}
 \input{src/sections/microbundle/parts/trivial}
 \input{src/sections/microbundle/parts/paracompact}
+\input{src/sections/microbundle/parts/underlying}
 \input{src/sections/microbundle/parts/tangent}
+\input{src/sections/microbundle/parts/equivalence}
