--- a/src/sections/suspension/parts/induced.tex
+++ b/src/sections/suspension/parts/induced.tex
@@ -1,9 +1,9 @@
 % definition
 \begin{mystatement}{definition}{suspension::induced}
     Let $\bb$ be a rooted microbundle over $B$ and $f: A \to B$ a based map.
-    The induced microbundle $\ind{f}\bb$ is equipped with the rooting
+    We equip the induced microbundle $\ind{f}\bb$ with the rooting
     \[
-        \germdef{\ind{f}R}{E(\ind{f}\bb[a_0])
+        \germdef{R_f}{E(\ind{f}\bb[a_0])
         = a_0 \cross E(\bb[b_0])}{e^n_{a_0}}
     \]
     that coincides with $R$ if we consider
@@ -12,13 +12,9 @@
 
 % afterword
 \begin{myparagraph}
-    The total space $E(\ind{f}\bb[a_0])$ equals $a_0 \cross E(\bbb)$, because
-    \[
-        E(\ind{f}\bb[a_0])
-        = \set{(a, e) \in A \cross E(\bb)}{a = a_0 \tand f(a) = b_0 = j(e)}
-    \]
-    \[
-        = a_0 \cross \set{e \in E(\bb)}{j(e) = b_0}
-        = a_0 \cross E(\bbb).
-    \]
+    The total space $E(\ind{f}\bb[a_0])$ is the same as $a_0 \cross E(\bbb)$, because
+    \[ E(\ind{f}\bb[a_0]) = \set{(a, e) \in A \cross E(\bb)}{a = a_0 \tand f(a) = b_0 = j(e)} \]
+    \[ = a_0 \cross \set{e \in E(\bb)}{j(e) = b_0} = a_0 \cross E(\bbb). \]
+    % intentionally empty
+    
 \end{myparagraph}
