--- a/src/sections/suspension/section.tex
+++ b/src/sections/suspension/section.tex
@@ -1,20 +1,21 @@
 \begin{myparagraph}
-    In this chapter, we provide a proof for the Bouquet Lemma in \ref{whitney::bouquet}.
-    For this purpose we introduce so called `rooted microbundles'.
-    They allow us to properly define the wedge sum of two microbundles.
-    We will also show a version of the Homotopy Theorem
+    In the following,
+    we provide a proof for the Bouquet Lemma presented in \myintref{section::whitney}.
+    To this end, we introduce the concept of `rooted microbundles',
+    which allows us to define the wedge sum of two microbundles in a precise manner.
+    Additionally, we show a version of the Homotopy Theorem
     that is compatible with rooted-microbundles.
 
-    Throughout this chapter,
-    we assume that every topological space comes with an arbitrary base point
+    In this section,
+    we assume that every topological space is equipped with an arbitrary base point
     which we will denote with subscript $0$.
 \end{myparagraph}
-\section{Rooted Microbundles}\label{section::rooted}
+\subsection{Rooted Microbundles}\label{section::rooted}
 \input{src/sections/suspension/parts/rooted}
 \input{src/sections/suspension/parts/induced}
 \input{src/sections/suspension/parts/homotopy}
 \input{src/sections/suspension/parts/wedge}
-\section{Microbundles over a Suspension}\label{section::suspension}
+\subsection{Microbundles over a Suspension}\label{section::suspension}
 \input{src/sections/suspension/parts/suspension}
 \input{src/sections/suspension/parts/whitney}
 \input{src/sections/suspension/parts/paracompact}
