--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -1,23 +1,28 @@
-\begin{titlepage}
-    \begin{center}
-        % University Logo
-        % \includegraphics[width=0.5\textwidth]{university}
+% \begin{titlepage}
+%     \begin{center}
+%         % University Logo
+%         % \includegraphics[width=0.5\textwidth]{university}
 
-        \vfill % fill
+%         \vfill % fill
 
-        % Title
-        \Huge
-        \textbf{Microbundles on Topological Manifolds}
+%         % Title
+%         \Huge
+%         \textbf{Microbundles on Topological Manifolds}
 
-        \vspace{0.5cm} % spacing
+%         \vspace{0.5cm} % spacing
 
-        % Subtitle
-        \LARGE
-        based on J. Milnors studies on microbundles
+%         % Subtitle
+%         \LARGE
+%         based on J. Milnors studies on microbundles
 
-        \vspace{1.5cm} % spacing
+%         \vspace{1.5cm} % spacing
 
-        % Author
-        \textbf{Florian Burger}
-    \end{center}
-\end{titlepage}
+%         % Author
+%         \textbf{Florian Burger}
+%     \end{center}
+% \end{titlepage}
+
+\title{Microbundles on Topological Manifolds}
+\author{Florian Burger}
+\email{florian.burger@stud.uni-heidelberg.de}
+\date{\today}
