--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -6,7 +6,7 @@
 
 % statement
 \newtheorem{statement}{}
-\numberwithin{statement}{chapter}
+\numberwithin{statement}{section}
 % statement :: Definition
 \theoremstyle{definition}
 \newtheorem{definition}[statement]{Definition}
@@ -36,30 +36,30 @@
 \NewDocumentEnvironment{mystatement}{momo}{%
   % begin
   \ifthenelse{\equal{#1}{definition}}{%
-    \begin{leftbar}%
+    % \begin{leftbar}%
     \IfValueTF{#2}{\begin{definition}[#2]}{\begin{definition}}%
   }{}%
   \ifthenelse{\equal{#1}{theorem}}{%
-    \begin{leftbar}%
+    % \begin{leftbar}%
     \IfValueTF{#2}{\begin{theorem}[#2]}{\begin{theorem}}%
   }{}%
   \ifthenelse{\equal{#1}{proposition}}{%
-    \begin{leftbar}%
+    % \begin{leftbar}%
     \IfValueTF{#2}{\begin{proposition}[#2]}{\begin{proposition}}%
   }{}%
   \ifthenelse{\equal{#1}{corollary}}{%
-    \begin{leftbar}%
+    % \begin{leftbar}%
     \IfValueTF{#2}{\begin{corollary}[#2]}{\begin{corollary}}%
   }{}%
   \ifthenelse{\equal{#1}{lemma}}{%
-    \begin{leftbar}%
+    % \begin{leftbar}%
     \IfValueTF{#2}{\begin{lemma}[#2]}{\begin{lemma}}%
   }{}%
-    \ifthenelse{\equal{#1}{remark}}{%
+  \ifthenelse{\equal{#1}{remark}}{%
     \IfValueTF{#2}{\begin{remark}[#2]}{\begin{remark}}%
   }{}%
   \ifthenelse{\equal{#1}{example}}{%
-    \begin{leftbar}%
+    % \begin{leftbar}%
     \IfValueTF{#2}{\begin{example}[#2]}{\begin{example}}%
   }{}%
   % label
@@ -72,15 +72,35 @@
   \blankbreak{}%
 } {%
   % vspace
-  \vspace{2.5pt}
+  % \vspace{2.5pt}
   % end
-  \ifthenelse{\equal{#1}{definition}}{\end{definition}\end{leftbar}}{}%
-  \ifthenelse{\equal{#1}{theorem}}{\end{theorem}\end{leftbar}}{}%
-  \ifthenelse{\equal{#1}{proposition}}{\end{proposition}\end{leftbar}}{}%
-  \ifthenelse{\equal{#1}{corollary}}{\end{corollary}\end{leftbar}}{}%
-  \ifthenelse{\equal{#1}{lemma}}{\end{lemma}\end{leftbar}}{}%
-  \ifthenelse{\equal{#1}{remark}}{\end{remark}}{}%
-  \ifthenelse{\equal{#1}{example}}{\end{example}\end{leftbar}}{}%
+  \ifthenelse{\equal{#1}{definition}}{%
+    \end{definition}%
+    % \end{leftbar}%
+  }{}%
+  \ifthenelse{\equal{#1}{theorem}}{%
+    \end{theorem}%
+    % \end{leftbar}%
+  }{}%
+  \ifthenelse{\equal{#1}{proposition}}{%
+    \end{proposition}%
+    % \end{leftbar}%
+  }{}%
+  \ifthenelse{\equal{#1}{corollary}}{%
+    \end{corollary}%
+    % \end{leftbar}%
+  }{}%
+  \ifthenelse{\equal{#1}{lemma}}{%
+    \end{lemma}%
+    % \end{leftbar}%
+  }{}%
+  \ifthenelse{\equal{#1}{remark}}{%
+    \end{remark}%
+  }{}%
+  \ifthenelse{\equal{#1}{example}}{%
+    \end{example}%
+    % \end{leftbar}%
+  }{}%
 }
 
 % myproof
