--- a/src/sections/homotopy/section.tex
+++ b/src/sections/homotopy/section.tex
@@ -10,12 +10,12 @@
     on microbundles which allows us to classify
     isomorphisms between microbundles.
 \end{myparagraph}
-\section{Map-Germs}\label{section::germs}
+\subsection{Map-Germs}\label{section::germs}
 \input{src/sections/homotopy/parts/germ}
 \input{src/sections/homotopy/parts/isomorphism}
 \input{src/sections/homotopy/parts/bundle}
 \input{src/sections/homotopy/parts/williamson}
-\section{Proving the Homotopy Theorem}\label{section::homotopy_prove}
+\subsection{Proving the Homotopy Theorem}\label{section::homotopy_prove}
 \input{src/sections/homotopy/parts/glueing}
 \input{src/sections/homotopy/parts/lemma1}
 \input{src/sections/homotopy/parts/lemma2}
